# agentbeats-paper-extractor

./: .dockerignore  Dockerfile.client_cli  README.md  pyproject.toml  sample.env
.github/workflows/: publish.yml  purple-agent-workflow.yml
scenarios/dairy-paper/: Dockerfile.paper-agent  Dockerfile.paper-evaluator  helpers.py  paper_agent.py  paper_evaluator.py  scenario.toml
scenarios/dairy-paper/data/input/: Paper001_raw.xml  Paper002_raw.xml  Paper003_raw.xml  Paper004_raw.xml  Paper005_raw.xml  Paper006_raw.xml
scenarios/dairy-paper/data/output/: Paper001_answer.json  Paper002_answer.json  Paper003_answer.json  Paper004_answer.json  Paper005_answer.json  Paper006_answer.json
scenarios/dairy-paper/templates/: template_output.json
