[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentbeats-paper-extractor"
version = "0.1.0"
description = "AgentBeats Paper Extractor - Dairy Science Paper Extraction Evaluation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk>=0.3.5",
    "litellm>=1.0.0",
    "loguru>=0.7.0",
    "nest-asyncio>=1.6.0",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "sse-starlette>=1.6.0",
    "starlette>=0.27.0",
    "uvicorn>=0.35.0",
]

[project.scripts]
agentbeats-run = "agentbeats.run_scenario:main"

[dependency-groups]
dev = [
    "mypy>=1.18.1",
]
evaluator = [
    "bert-score>=0.3.13",
]

[tool.uv]
package = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/agentbeats"]
